refactoring, swagger, readme